Wed Mar 10 00:02:23 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (_digest): Delete tempfiles.

	* lib/Mj/Resend.pm (do_digests): Delete tempfiles.

	* lib/Majordomo.pm (_digest): Correct typo.

	* lib/Mj/Config.pm (parse_digests): Change the way a default time
 	is handled.
	(_str_to_clock): Deal with 'never', 'none', 'all', 'always',
 	'any'.

	* lib/Mj/TextOutput.pm (mkdigest): Add mkdigest.

	* lib/Mj/CommandProps.pm: Add mkdigest.

Tue Mar  9 22:55:43 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (_digest): Add -check and -force modes.

	* lib/Bf/Sender.pm (M_regular_sender): Don't bomb on undefined
 	message numbers.

Mon Mar  8 00:00:51 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_post): Use new _do_digests calling sequence.

	* lib/Mj/Digest/Index.pm: Fix some perl5.004 warnings.

	* lib/Mj/Format.pm (digest): New function.

	* lib/Mj/TextOutput.pm (digest): New function.

	* lib/Majordomo.pm (digest): New function: interface to digest.

Sun Mar  7 00:40:37 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Digest.pm (trigger): Overhaul to force (override
 	decide()) and to accept a list of digests to trigger.
	(add): Call the trigger function with new arguments.

	* lib/Mj/List.pm (digest_incissue): New function.
	(digest_incvol): New function.

	* lib/Mj/Resend.pm (_do_digests): Excise issue incrementing code,
 	call digest_incissue.

	* lib/Mj/Digest/Build.pm (idx_subject_author): Fix undef warning.
	(idx_subject_author): Overhaul idx_subject_author.

	* lib/Mj/Digest/MIME.pm (new): Remove problems with {index} =>
 	{'index'}.

	* lib/Mj/Digest.pm (trigger): Updated to take a lists of digests
 	to trigger (default to all of them) and an argument to force
 	generation regardless of other limitations.

	* lib/Mj/CommandProps.pm: Add 'digest' command.

	* lib/Mj/Digest/MIME.pm: Handle 'preindex', 'postindex', and
 	'footer' correctly.
