@@ -35,6 +35,11 @@ Define module interface.  Move lesser-used commands out of Majordomo.pm
 Top of the list 
 ---------------
 
+Can filespace system entirely.  To see if a file exists, just stat it.
+Store additional info in a dotfile.  Only difficult rewrite is index.
+
+
+
 Move all aliases into one file, and all vut entries into one file, to make
   sendmail configuration easier.
 Move t_accept messages into external files.
@@ -44,8 +49,6 @@ Finish work on allowed_flags and allowed_classes.
 Update FILES.
 Delay allocation of Dest/Sorter objects until something actually goes into
   them.
-Keep a count of addresses delivered to and return this out of the delivery
-  module.
 Make Deliver take a list of delivery hashes, so you can pass in a whole
   pile of class/message sets (including multiple files to the same class,
   as long as they're in a different delivery hash).  This would allow a
@@ -54,13 +57,9 @@ Make Deliver take a list of delivery hashes, so you can pass in a whole
 Do more substitutions in mailfile actions.  Allow a hashref of
   substitutions to be passed in.
 
-Can filespace system entirely.  To see if a file exists, just stat it.
-Store additional info in a dotfile.  Only difficult rewrite is index.
-
 ! Digest:
 
 report-digest command to show status of digest spools.
-digest time of "never".
 
 Way to force the users to use the digest version:
   allowed_subscribtion_classes - array of names of subscription classes that
@@ -793,4 +792,6 @@ Export information from the registration database to .htaccess files, so
 Provide some way for users to see what digests are available.
 Add an X-Header indicating whether or not the posting user is subscribed.
 Make _post call inform itself to get useful information in the log.
-digest-headers variable?
+ digest-headers variable?
+Keep a count of addresses delivered to and return this out of the delivery
+ module.
